column max width 100% to prevent overflow

--- a/what2do2day/static/assets/css/style.css
+++ b/what2do2day/static/assets/css/style.css
@@ -49,6 +49,9 @@ body {
     margin: 0;
     max-width: 100%;
 }
+.column{
+    max-width: 100%;
+}
 
 /* footer */
 .footer {
